fixing css alignment and stuff

--- a/app/assets/stylesheets/components/_list_card.scss
+++ b/app/assets/stylesheets/components/_list_card.scss
@@ -35,7 +35,7 @@
     display: inline-block;
     // background: LightCoral;
     img {
-      margin: 50px 0px;
+      margin: 50px 0px 50px 10px;
       float: right;
     }
     p {
