--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -33,7 +33,7 @@ $navbar-profile-radius: 50%;
  * ------------------------------------- */
 
 .super-nav {
-  line-height: 4.6;
+  line-height: 3.9;
   margin-bottom: 0;
 
   li {
